# FAP

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: datasets.yaml
fap/: __init__.py  configs.py
fap/data/: breast_dataset.py  cbis_ddsm_dataset.py  cmmd_dataset.py
fap/eval/: eval_whitebox.py  evaluate_cbis.py  evaluate_cmmd.py
fap/fap_core/: attacks.py  fap_blur.py  fixation.py  masks.py
fap/models/: rblur_vgg.py
fap/preprocess/: cbis_preprocess.py  cbis_tools.py  cmmd_assign_labels.py  cmmd_preprocess.py  cmmd_split_tools.py
fap/scripts/: certify_smoothing.py  eval_cbis.py  eval_cmmd.py  eval_whitebox.py  train_breast.py  train_cbis.py  train_cmmd.py
