[project]
name = "fap"
version = "0.1.0"
description = "Foveated Adversarial Purification (FAP): datasets, preprocessing, model, training, and robustness evaluation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy",
  "pandas",
  "pillow",
  "scikit-learn",
  "opencv-python",
  "pydicom",
  "scipy",
  "tqdm",
  "einops",
  "pyyaml"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
